--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<input type="text" id="_text_wish"/>
+	<button type="button" onclick="startRecognition()">start></button>
+	<button type="button" onclick="stopRecognition()">stop></button>
 </body>
 
 </html>
