--- a/index.html
+++ b/index.html
@@ -3,13 +3,94 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
+	<link rel="stylesheet" type="text/css" href="src/css/main.css">
 	<script src="src/js/page.js"></script>
+	<script src="src/js/utils.js"></script>
 	<script src="src/lib/jquery-3.3.1.min.js"> </script>
+	<script src='src/lib/spritespin.js' type='text/javascript'></script>
 </head>
 <body>
-	<input type="text" id="_text_wish"/>
-	<button type="button" onclick="startRecognition()">start></button>
-	<button type="button" onclick="stopRecognition()">stop></button>
+	<img class="Button" src="asset/img/button_home.png" onclick="onClickHome()" id="_btn_home"/>
+
+	<div id="_page_home" class="Container">
+		
+		<!-- <div class="Row" style="margin-top:95px">
+			<img src="asset/img/title_home.png">
+		</div> -->
+		<div id="_title_animation_wrapper">
+			<div id="_title_animation"></div>
+		</div>
+		<div class="Row" style="margin-top:866px">
+			<img class="Button" src="asset/img/button_start.png" onclick="onClickStart()" id="_btn_start"/>
+		</div>
+	</div>
+	<div id="_page_record" class="Container hidden close">
+		<div class="Row" style="margin-top:279px">
+			<div class="CloudWrapper Big">
+				<img src="asset/img/cloud_record.png">
+				<img src="asset/img/title_record.png">
+			</div>
+		</div>
+		<div class="Row" style="margin-top:73px">
+			<img src="asset/img/content_record.png" class="Hint">
+		</div>
+		<div class="Row" style="margin-top:68px">
+			<img class="Button" src="asset/img/button_again.png" onclick="onClickRecordAgain()" id="_btn_again" style="margin-right:105px"/>
+			<img class="Button" src="asset/img/button_finish.png" onclick="onClickFinishRecord()" id="_btn_next"/>
+		</div>
+	</div>
+	<div id="_page_edit" class="Container hidden close">
+		<div class="Row" style="margin-top:84px">
+			<div class="CloudWrapper Small">
+				<img src="asset/img/cloud_edit.png">
+				<img src="asset/img/title_edit.png">
+			</div>
+		</div>
+		<div class="Row" style="margin-top:56px">
+			<input type="text" id="_text_name" class="TextInput" placeholder="輸入名字" />
+		</div>
+		<div class="Row" style="margin-top:24px">
+			<input type="text" id="_text_wish" class="TextInput" placeholder="輸入新年願望"/>
+		</div>
+		<div class="Row" style="margin-top:56px">
+			<img class="Button" src="asset/img/button_finish.png" onclick="onClickFinish()" id="_btn_finish"/>
+		</div>
+	</div>
+	<div id="_page_share" class="Container hidden close">
+		<div class="Row" style="margin-top:84px">
+			<div class="CloudWrapper Small">
+				<img src="asset/img/cloud_edit.png">
+				<img src="asset/img/title_share.png">
+			</div>
+		</div>
+		<div class="Row" style="margin-top:65px">
+			<div class="QRcodeWrapper">
+				<div class="QRcode"></div>
+			</div>
+		</div>
+		<div class="Row" style="margin-top:62px">
+			<img class="Button" src="asset/img/button_info.png" id="_btn_info" onClick="onClickInfo()"/>
+		</div>
+	</div>
+	<div id="_page_info" class="Container hidden close">
+		<div class="Row" style="margin-top:84px">
+			<div class="CloudWrapper Small">
+				<img src="asset/img/cloud_edit.png">
+				<img src="asset/img/title_share.png">
+			</div>
+		</div>
+		<div class="Row" style="margin-top:56px">
+			<input type="text" id="_text_info_name" class="TextInput" placeholder="輸入名字"/>
+		</div>
+		<div class="Row" style="margin-top:24px">		
+			<input type="text" id="_text_info_phone" class="TextInput" placeholder="輸入電話"/>
+		</div>
+
+		<div class="Row" style="margin-top:56px">
+			<img class="Button" src="asset/img/button_send.png" onclick="onClickSend()" id="_btn_send"/>
+		</div>
+	</div>	
+	
 </body>
 
 </html>
