--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<div class="Row hidden close" style="margin-top:73px">
 			<img src="asset/img/content_2.png" class="Hint">
 		</div>
-		<div class="Row hidden close" style="margin-top:68px">
+		<div class="Row hidden close" style="margin-top:68px" id="_button_record">
 			<img class="Button" src="asset/img/button_2.png" onclick="onClickRecordAgain()" id="_btn_again" style="margin-right:105px"/>
 			<img class="Button" src="asset/img/button_2_2.png" onclick="onClickFinishRecord()" id="_btn_next"/>
 		</div>
@@ -66,7 +66,7 @@
 		<div class="Row hidden close" style="margin-top:44px">
 			<input type="text" id="_text_wish" class="TextInput" placeholder="輸入新年願望" maxlength="20"/>
 		</div>
-		<div class="Row hidden close" style="position:relative;top:50px">
+		<div class="Row hidden close" style="position:relative;top:80px">
 			<img class="Button" src="asset/img/button_3.png" onclick="onClickFinish()" id="_btn_finish"/>			
 			<div class="ErrorHint hidden" id="_error_text">*不可空白</div>		
 		</div>
@@ -104,13 +104,13 @@
 			<input type="phone" id="_text_info_phone" class="TextInput" placeholder="輸入電話" maxlength="20"/>
 		</div>
 
-		<div class="Row hidden close" style="position:relative;top:50px">
+		<div class="Row hidden close" style="position:relative;top:80px">
 			<img class="Button" src="asset/img/button_5.png" onclick="onClickSend()" id="_btn_send"/>			
 			<div class="ErrorHint hidden" id="_error_info">*不可空白</div>			
 		</div>
 	</div>	
 	<div id="_page_finish" class="Container hidden close">
-		<div class="Row hidden close" >
+		<div class="Row hidden close" style="margin-top:329px">
 			<div class="CloudWrapper Finish">
 				<img src="asset/img/cloud_6.png">
 				<img src="asset/img/title_6.png">
