--- a/backend/redirect.html
+++ b/backend/redirect.html
@@ -5,7 +5,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
 	<style type="text/css">		
 		body{
+			border:0;
+			margin:0;
 			background-color: #FE3264;
+			background-image: url("img/back_bgd.png");
+			background-repeat: repeat;
+
 			overflow: hidden;
 			font-family: 'Noto Sans TC', sans-serif;
 			letter-spacing: 120%;
@@ -52,6 +57,10 @@
 			height:40%;
 			max-width: 90%;
 		}
+		.title_img{
+				margin-top: 80px;
+				height:20%;			
+		}		
 	</style>
 
 	
@@ -65,8 +74,8 @@
 	</script>
 	<div class="vertCenterWrapper">
 		<div class="vertCenterChild RedirectText">
-			<!-- <img class="Center" src="img/head.png"/><br> -->
-			<p class="Center">發佈成功!</p>
+			<img class="title_img center" src="img/share-09.png"/>
+			<p class="Center" style="margin-top:50px">發佈成功!</p>
 			<p class="Center">前往<a href="https://meet.eslite.com/tw/tc/news/201912100003">迷誠品</a>看更多活動訊息</p> 
 		</div>
 	</div>	
