--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
 	<div id="_page_record" class="Container hidden close">
 		<div class="Row hidden close" style="margin-top:279px">
 			<div class="CloudWrapper Record">
-				<img src="asset/img/cloud_2.png">
-				<img src="asset/img/title_2.png">
+				<span class="CloudLeft"></span>
+				<span class="CloudRight"></span>
+					<!-- <img src="asset/img/cloud_2.png"> -->
+				<img src="asset/img/title_2.png" >
 			</div>
 		</div>
 		<div class="Row hidden close" style="margin-top:73px">
@@ -57,15 +59,17 @@
 	<div id="_page_edit" class="Container hidden close">
 		<div class="Row hidden close" style="margin-top:84px">
 			<div class="CloudWrapper Title">
-				<img src="asset/img/cloud_3.png">
-				<img src="asset/img/title_3.png">
+				<!-- <img src="asset/img/cloud_3.png"> -->\
+				<span class="CloudLeft Title"></span>
+				<span class="CloudRight Title"></span>
+				<img src="asset/img/title_3.png" style="top:105">
 			</div>
 		</div>
 		<div class="Row hidden close" style="margin-top:98px">
 			<input type="text" id="_text_name" class="TextInput" placeholder="輸入名字" maxlength="10" />
 		</div>
 		<div class="Row hidden close" style="margin-top:44px">
-			<input type="text" id="_text_wish" class="TextInput" placeholder="輸入新年願望" maxlength="20"/>
+			<input type="text" id="_text_wish" class="TextInput" placeholder="輸入新年願望" maxlength="15"/>
 		</div>
 		<div class="Row hidden close" style="position:relative;top:80px">
 			<img class="Button" src="asset/img/button_3.png" onclick="onClickFinish()" id="_btn_finish"/>			
@@ -75,8 +79,10 @@
 	<div id="_page_share" class="Container hidden close">
 		<div class="Row hidden close" style="margin-top:84px">
 			<div class="CloudWrapper Title">
-				<img src="asset/img/cloud_3.png">
-				<img src="asset/img/title_4.png">
+				<!-- <img src="asset/img/cloud_3.png"> -->
+				<span class="CloudLeft Title"></span>
+				<span class="CloudRight Title"></span>
+				<img src="asset/img/title_4.png" style="top:105">
 			</div>
 		</div>
 		<div class="Row hidden close" style="margin-top:120px">
@@ -92,8 +98,10 @@
 	<div id="_page_info" class="Container hidden close">
 		<div class="Row hidden close" style="margin-top:84px">
 			<div class="CloudWrapper Title">
-				<img src="asset/img/cloud_3.png">
-				<img src="asset/img/title_5.png">
+				<!-- <img src="asset/img/cloud_3.png"> -->
+				<span class="CloudLeft Title"></span>
+				<span class="CloudRight Title"></span>
+				<img src="asset/img/title_5.png" style="top:105">
 			</div>
 		</div>
 		<div class="Row hidden close" style="margin-top:66px">
@@ -114,8 +122,10 @@
 	<div id="_page_finish" class="Container hidden close">
 		<div class="Row hidden close" style="margin-top:329px">
 			<div class="CloudWrapper Finish">
-				<img src="asset/img/cloud_6.png">
-				<img src="asset/img/title_6.png">
+				<!-- <img src="asset/img/cloud_6.png"> -->
+				<span class="CloudLeft Finish"></span>
+				<span class="CloudRight Finish"></span>
+				<img src="asset/img/title_6.png" style="top:440">
 			</div>
 		</div>
 		<div class="Row hidden close" style="margin-top:106px">
